--- a/CleanArch.View/appsettings.json
+++ b/CleanArch.View/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SqlExpress;Database=BD_CLEAN_ARCH_DEMO;Integrated Security=False;MultipleActiveResultSets=true;User ID=sa;Password=s9e9s9c9"
+    "DefaultConnection": "Server=.\\SqlExpress;Database=BD_CLEAN_ARCH_DEMO;Integrated Security=False;MultipleActiveResultSets=true;User ID=xxx;Password=xxx"
   },
   "Logging": {
     "LogLevel": {
