--- a/CleanArch.Infra.Data/CleanArch.Infra.Data.csproj
+++ b/CleanArch.Infra.Data/CleanArch.Infra.Data.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CleanArch.Domain\CleanArch.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
