--- a/CleanArch.Presentation/CleanArch.Presentation.csproj
+++ b/CleanArch.Presentation/CleanArch.Presentation.csproj
@@ -1,13 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <UserSecretsId>aspnet-CleanArch.View-1E9217C0-0CF8-4F7D-9D9E-7DFAA59F2D35</UserSecretsId>
+    <UserSecretsId>aspnet-CleanArch.Presentation-67BF1270-16CC-4412-9388-1CA639ACD3E7</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArch.Infra.Data\CleanArch.Infra.Data.csproj" />
     <ProjectReference Include="..\CleanArch.Infra.IoC\CleanArch.Infra.IoC.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
   </ItemGroup>
 
 </Project>
